k8s/preprod/07-flights-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-api-deployment
  namespace: preprod
  labels:
    app: flights-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flights-api-pod
  template:
    metadata:
      labels:
        app: flights-api-pod
    spec:
      containers:
        - name: flights-api-container
          image: DOCKER_USER/flights-api:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
