k8s/preprod/09-spacemissions-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacemissions-api-deployment
  namespace: preprod
  labels:
    app: spacemissions-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spacemissions-api-pod
  template:
    metadata:
      labels:
        app: spacemissions-api-pod
    spec:
      containers:
        - name: spacemissions-api-container
          image: DOCKER_USER/spacemissions-api:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
