k8s/preprod/11-search-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api-deployment
  namespace: preprod
  labels:
    app: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-api-pod
  template:
    metadata:
      labels:
        app: search-api-pod
    spec:
      containers:
        - name: search-api-container
          image: DOCKER_USER/search-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
      restartPolicy: Always
