k8s/preprod/06-employees-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employees-api
  namespace: preprod
  labels:
    app: employees-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: employees-api-pod
  type: ClusterIP
