k8s/preprod/08-flights-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights-api
  namespace: preprod
  labels:
    app: flights-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31002
  selector:
    app: flights-api-pod
  type: NodePort
