k8s/preprod/10-spacemissions-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacemissions-api
  namespace: preprod
  labels:
    app: spacemissions-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31003
  selector:
    app: spacemissions-api-pod
  type: NodePort
