k8s/preprod/12-search-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api
  namespace: preprod
  labels:
    app: search-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31004
  selector:
    app: search-api-pod
  type: NodePort
